--- a/necchange/package.json
+++ b/necchange/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
+    "prisma": "^4.16.1",
     "tailwindcss": "^3.3.2"
   }
 }
