--- a/necchange/package.json
+++ b/necchange/package.json
@@ -2,6 +2,9 @@
   "name": "necchange",
   "version": "0.1.0",
   "private": true,
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,19 +12,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^4.16.2",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
+    "axios": "^1.4.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "ts-node": "^10.9.1",
     "typescript": "5.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
+    "prisma": "^4.16.1",
     "tailwindcss": "^3.3.2"
   }
 }
