--- a/necchange/package.json
+++ b/necchange/package.json
@@ -12,6 +12,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fullcalendar/core": "^6.1.8",
+    "@fullcalendar/daygrid": "^6.1.8",
+    "@fullcalendar/interaction": "^6.1.8",
+    "@fullcalendar/react": "^6.1.8",
+    "@fullcalendar/timegrid": "^6.1.8",
     "@prisma/client": "^4.16.2",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
