--- a/necchange/package.json
+++ b/necchange/package.json
@@ -18,6 +18,7 @@
     "@fullcalendar/react": "^6.1.8",
     "@fullcalendar/timegrid": "^6.1.8",
     "@prisma/client": "^4.16.2",
+    "@rooks/use-window-size": "^4.11.2",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
