--- a/necchange/package.json
+++ b/necchange/package.json
@@ -26,6 +26,7 @@
     "eslint-config-next": "13.4.7",
     "next": "13.4.7",
     "react": "18.2.0",
+    "react-checkbox-tree": "^1.8.0",
     "react-dom": "18.2.0",
     "ts-node": "^10.9.1",
     "typescript": "5.1.3"
@@ -34,6 +35,7 @@
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
     "prisma": "^4.16.1",
+    "sass": "^1.63.6",
     "tailwindcss": "^3.3.2"
   }
 }
