--- a/necchange/package.json
+++ b/necchange/package.json
@@ -12,12 +12,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.0.2",
+    "@fullcalendar/core": "^6.1.8",
     "@fullcalendar/daygrid": "^6.1.8",
     "@fullcalendar/google-calendar": "^6.1.8",
     "@fullcalendar/interaction": "^6.1.8",
     "@fullcalendar/react": "^6.1.8",
     "@fullcalendar/timegrid": "^6.1.8",
-    "@fullcalendar/core": "^6.1.8",
     "@prisma/client": "^4.16.2",
     "@rooks/use-window-size": "^4.11.2",
     "@types/node": "20.3.1",
