--- a/necchange/package.json
+++ b/necchange/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@faker-js/faker": "^8.0.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@fullcalendar/core": "^6.1.8",
     "@fullcalendar/daygrid": "^6.1.8",
     "@fullcalendar/google-calendar": "^6.1.8",
@@ -27,6 +29,7 @@
     "axios": "^1.4.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "fontawesome": "^5.6.3",
     "next": "^13.4.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
