--- a/necchange/package.json
+++ b/necchange/package.json
@@ -19,15 +19,21 @@
     "@fullcalendar/interaction": "^6.1.8",
     "@fullcalendar/react": "^6.1.8",
     "@fullcalendar/timegrid": "^6.1.8",
+    "@headlessui/react": "^1.7.15",
+    "@heroicons/react": "^2.0.18",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^4.16.2",
     "@rooks/use-window-size": "^4.11.2",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
     "axios": "^1.4.0",
+    "clsx": "^1.2.1",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "next": "^13.4.8",
+    "next-auth": "^4.22.1",
+    "nodemailer": "^6.9.3",
     "react": "18.2.0",
     "react-checkbox-tree": "^1.8.0",
     "react-dom": "18.2.0",
@@ -35,6 +41,7 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@types/nodemailer": "^6.4.8",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
     "prisma": "^4.16.1",
