--- a/necchange/.env
+++ b/necchange/.env
@@ -6,16 +6,9 @@
 
 DATABASE_URL="postgresql://necc:necc@localhost:5432/NECChange?schema=public"
 
+EMAIL_SERVER=smtp://necclogin:pihycrglxcrjigmt@smtp.gmail.com:587
+EMAIL_FROM=NECChange <necclogin@gmail.com>
 
-EMAIL_SERVER_USER=apikey
-EMAIL_SERVER_PASSWORD=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
-EMAIL_SERVER_HOST=smtp.sendgrid.net
-EMAIL_SERVER_PORT=587
-EMAIL_FROM=a91699@alunos.uminho.pt
-
-GOOGLE_CLIENT_ID="227401449898-rebe21ur93a86kk66ll2k3btu48uqle3.apps.googleusercontent.com"
-GOOGLE_CLIENT_SECRET="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"
-
-NEXTAUTH_SECRET="1234"
+NEXTAUTH_SECRET=943db4ce3f04568194375fc86346bcc0
 NEXTAUTH_URL=http://localhost:3000
 
