--- a/necchange/package.json
+++ b/necchange/package.json
@@ -22,7 +22,7 @@
     "@fullcalendar/interaction": "^6.1.8",
     "@fullcalendar/react": "^6.1.8",
     "@fullcalendar/timegrid": "^6.1.8",
-    "@prisma/client": "^4.16.2",
+    "@prisma/client": "^5.0.0",
     "@rooks/use-window-size": "^4.11.2",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
@@ -36,13 +36,14 @@
     "react": "18.2.0",
     "react-checkbox-tree": "^1.8.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
     "ts-node": "^10.9.1",
     "typescript": "5.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
-    "prisma": "^4.16.1",
+    "prisma": "^5.0.0",
     "tailwindcss": "^3.3.2"
   }
 }
