Login page com o template do bruno

--- a/necchange/.env
+++ b/necchange/.env
@@ -6,3 +6,8 @@
 
 DATABASE_URL="postgresql://necc:necc@localhost:5432/NECChange?schema=public"
 
+EMAIL_SERVER=smtp://necclogin:pihycrglxcrjigmt@smtp.gmail.com:587
+EMAIL_FROM=NECChange <necclogin@gmail.com>
+
+NEXTAUTH_SECRET=943db4ce3f04568194375fc86346bcc0
+NEXTAUTH_URL=http://localhost:3000
