--- a/necchange/package.json
+++ b/necchange/package.json
@@ -15,7 +15,6 @@
     "@faker-js/faker": "^8.0.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-
     "@fullcalendar/core": "^6.1.8",
     "@fullcalendar/daygrid": "^6.1.8",
     "@fullcalendar/google-calendar": "^6.1.8",
@@ -35,10 +34,10 @@
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "fontawesome": "^5.6.3",
-
+    "net": "^1.0.2",
     "next": "^13.4.8",
     "next-auth": "^4.22.1",
-    "nodemailer": "^6.9.3",
+    "nodemailer": "^6.9.4",
     "react": "18.2.0",
     "react-checkbox-tree": "^1.8.0",
     "react-dom": "18.2.0",
