Managed some permissions

--- a/necchange/.env
+++ b/necchange/.env
@@ -11,3 +11,5 @@ EMAIL_FROM=NECChange <necclogin@gmail.com>
 
 NEXTAUTH_SECRET=943db4ce3f04568194375fc86346bcc0
 NEXTAUTH_URL=http://localhost:3000
+
+EMAIL_SUPER_USER="dev@necc.di.uminho.pt"
