--- a/necchange/package.json
+++ b/necchange/package.json
@@ -25,7 +25,6 @@
     "@heroicons/react": "^2.0.18",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^4.16.2",
-
     "@rooks/use-window-size": "^4.11.2",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
@@ -50,6 +49,7 @@
     "@types/nodemailer": "^6.4.8",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
+    "prettier": "3.0.0",
     "prisma": "^5.0.0",
     "tailwindcss": "^3.3.2"
   }
