--- a/necchange/package.json
+++ b/necchange/package.json
@@ -31,6 +31,7 @@
     "@types/react-dom": "18.2.6",
     "axios": "^1.4.0",
     "clsx": "^1.2.1",
+    "dotenv": "^16.3.1",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "fontawesome": "^5.6.3",
