added trades to feed (#36)
* added trades to feed

* Trade modal refactor

Created two generic components:
 - Modal
 - Select

Refactored inner workings of trades

* Added trade removal

* Trades fully operational

---------

Co-authored-by: David Machado <machado.david190@gmail.com>

--- a/necchange/tsconfig.json
+++ b/necchange/tsconfig.json
@@ -29,13 +29,8 @@
       ]
     }
   },
-  "exclude": [
-    "node_modules"
-  ],
-  "include": [
-    "next-env.d.ts",
-    ".next/types/**/*.ts",
-    "**/*.ts",
-    "**/*.tsx"
-  ]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/api/getCalendar/route.ts", "app/api/trades/student_schedule/[student_nr]/route.js", "app/components/schedule/StudentSchedule.tsx", "app/components/Feed/Sidebar/NewTrade/popUp/TradeEntry.tsx"],
+
+  "exclude": ["node_modules"]
+
 }
