Sq/Changed-Database (#43)
* Added Admin pages

* Renamed database

* Deleted student table

* Merged User and Student

---------

Co-authored-by: Jose Ferreira <trueferreira@gmail.com>

--- a/necchange/.env
+++ b/necchange/.env
@@ -12,4 +12,5 @@ EMAIL_FROM=NECChange <necclogin@gmail.com>
 NEXTAUTH_SECRET=943db4ce3f04568194375fc86346bcc0
 NEXTAUTH_URL=http://localhost:3000
 
-EMAIL_SUPER_USER="dev@necc.di.uminho.pt"
+NEXT_PUBLIC_GOOGLECALENDAR_API_KEY="AIzaSyC9JoiBdI2dMwd_ouObGbDGL1L5q4-zdrI"
+NEXT_PUBLIC_GOOGLECALENDAR_CALENDAR_ID='bk13tukvivk89ccqpevd3od838@group.calendar.google.com'
