--- a/necchange/package.json
+++ b/necchange/package.json
@@ -43,6 +43,7 @@
     "react-checkbox-tree": "^1.8.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-toastify": "^9.1.3",
     "ts-node": "^10.9.1",
     "typescript": "5.1.3"
   },
