--- a/necchange/package.json
+++ b/necchange/package.json
@@ -35,6 +35,7 @@
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "fontawesome": "^5.6.3",
+    "moment": "^2.29.4",
     "net": "^1.0.2",
     "next": "^13.4.8",
     "next-auth": "^4.22.1",
