--- a/necchange/package.json
+++ b/necchange/package.json
@@ -41,8 +41,10 @@
     "nodemailer": "^6.9.4",
     "react": "18.2.0",
     "react-checkbox-tree": "^1.8.0",
+    "react-data-table-component": "^7.5.3",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "styled-components": "^6.0.7",
     "ts-node": "^10.9.1",
     "typescript": "5.1.3"
   },
