--- a/necchange/package.json
+++ b/necchange/package.json
@@ -12,6 +12,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@faker-js/faker": "^8.0.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
@@ -23,6 +25,9 @@
     "@fullcalendar/timegrid": "^6.1.8",
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
+    "@mui/material": "^5.14.6",
+    "@mui/x-date-pickers": "^6.12.0",
+    "@mui/x-date-pickers-pro": "^6.12.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^4.16.2",
     "@rooks/use-window-size": "^4.11.2",
@@ -31,6 +36,7 @@
     "@types/react-dom": "18.2.6",
     "axios": "^1.4.0",
     "clsx": "^1.2.1",
+    "dayjs": "^1.11.9",
     "dotenv": "^16.3.1",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
@@ -47,7 +53,6 @@
     "react-icons": "^4.10.1",
     "styled-components": "^6.0.7",
     "react-toastify": "^9.1.3",
-    "styled-components": "^6.0.7",
     "ts-node": "^10.9.1",
     "typescript": "5.1.3"
   },
