--- a/necchange/package.json
+++ b/necchange/package.json
@@ -30,39 +30,51 @@
     "@mui/x-date-pickers-pro": "^6.12.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^4.16.2",
+    "@react-pdf/renderer": "^3.1.12",
     "@rooks/use-window-size": "^4.11.2",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
     "axios": "^1.4.0",
     "clsx": "^1.2.1",
+    "core-js": "^2.5.7",
     "dayjs": "^1.11.9",
     "dotenv": "^16.3.1",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "fontawesome": "^5.6.3",
+    "fs": "^0.0.1-security",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.6.0",
     "moment": "^2.29.4",
     "net": "^1.0.2",
     "next": "^13.4.8",
     "next-auth": "^4.22.1",
     "nodemailer": "^6.9.4",
+    "pdfkit": "^0.13.0",
+    "pdfmake": "^0.2.7",
     "react": "18.2.0",
     "react-checkbox-tree": "^1.8.0",
     "react-data-table-component": "^7.5.3",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
-    "styled-components": "^6.0.7",
-
     "react-toastify": "^9.1.3",
+    "stream": "^0.0.2",
+    "styled-components": "^6.0.7",
     "ts-node": "^10.9.1",
     "typescript": "5.1.3"
   },
   "devDependencies": {
     "@types/nodemailer": "^6.4.8",
+    "@types/pdfmake": "^0.2.2",
     "autoprefixer": "^10.4.14",
+    "encoding": "^0.1.13",
     "postcss": "^8.4.24",
     "prettier": "3.0.0",
     "prisma": "^5.0.0",
     "tailwindcss": "^3.3.2"
+  },
+  "browser": {
+    "fs": false
   }
 }
