--- a/necchange/package.json
+++ b/necchange/package.json
@@ -28,6 +28,7 @@
     "@mui/material": "^5.14.6",
     "@mui/x-date-pickers": "^6.12.0",
     "@mui/x-date-pickers-pro": "^6.12.0",
+    "@netlify/plugin-nextjs": "^4.40.1",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^4.16.2",
     "@react-pdf/renderer": "^3.1.12",
