--- a/necchange/netlify.toml
+++ b/necchange/netlify.toml
@@ -1,5 +1,5 @@
 [context.production]
-command = "npm run build && echo \"NEXTAUTH_URL=$URL\" > .env.local"
+command = "npx prisma generate && npm run build && echo \"NEXTAUTH_URL=$URL\" > .env.local"
 
 [context.deploy-preview]
 command = "npm run build && echo \"NEXTAUTH_URL=$DEPLOY_PRIME_URL\" > .env.local"
