--- a/necchange/netlify.toml
+++ b/necchange/netlify.toml
@@ -1,8 +1,8 @@
 [context.production]
-command = "npx prisma generate && npx prisma migrate reset && npm run build"
+command = "npx prisma generate && npx prisma migrate reset --force && npm run build"
 
 [context.deploy-preview]
-command = "npx prisma generate && npx prisma migrate reset && npm run build"
+command = "npx prisma generate && npx prisma migrate reset --force && npm run build"
 
 [build]
    publish = ".next"
