--- a/necchange/netlify.toml
+++ b/necchange/netlify.toml
@@ -1,5 +1,13 @@
 [context.production]
-command = "npm run build && echo \"NEXTAUTH_URL=$URL\" > .env.local"
+command = "npx prisma generate && npm run build"
 
 [context.deploy-preview]
-command = "npm run build && echo \"NEXTAUTH_URL=$DEPLOY_PRIME_URL\" > .env.local"
+command = "npx prisma generate && npm run build"
+
+[build]
+   publish = ".next"
+   ignore = "/bin/false"
+
+
+[[plugins]]
+  package = "@netlify/plugin-nextjs"
