--- a/necchange/tsconfig.json
+++ b/necchange/tsconfig.json
@@ -1,37 +1,34 @@
 {
   "compilerOptions": {
-    "target": "es5",
     "lib": [
       "dom",
       "dom.iterable",
       "esnext"
     ],
     "allowJs": true,
-    "downlevelIteration": true,
     "skipLibCheck": true,
-    "strict": true,
-    "module": "CommonJS",
-    "forceConsistentCasingInFileNames": true,
+    "strict": false,
     "noEmit": true,
+    "incremental": true,
     "esModuleInterop": true,
+    "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true,
     "plugins": [
       {
         "name": "next"
       }
-    ],
-    "paths": {
-      "@/*": [
-        "./*"
-      ]
-    }
+    ]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/api/getCalendar/route.ts", "app/api/trades/student_schedule/[student_nr]/route.js", "app/components/schedule/StudentSchedule.tsx", "app/components/Feed/Sidebar/NewTrade/popUp/TradeEntry.tsx"],
-
-  "exclude": ["node_modules"]
-
+  "include": [
+    "next-env.d.ts",
+    ".next/types/**/*.ts",
+    "**/*.ts",
+    "**/*.tsx"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
