--- a/necchange/package.json
+++ b/necchange/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.5.0",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest"
