--- a/necchange/package.json
+++ b/necchange/package.json
@@ -9,8 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fullcalendar/core": "^6.1.9",
+    "@fullcalendar/daygrid": "^6.1.9",
+    "@fullcalendar/google-calendar": "^6.1.9",
+    "@fullcalendar/react": "^6.1.9",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "axios": "^1.5.0",
     "next": "latest",
+    "next-auth": "^4.23.1",
+    "nodemailer": "^6.9.5",
     "react": "latest",
     "react-dom": "latest"
   },
