Fix some typescript errors

--- a/necchange/.env
+++ b/necchange/.env
@@ -3,5 +3,13 @@
 
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+DATABASE_URL="postgresql://necc:necc@localhost:5432/NECChange?schema=public"
 
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+EMAIL_SERVER=smtp://necclogin:pihycrglxcrjigmt@smtp.gmail.com:587
+EMAIL_FROM=NECChange <necclogin@gmail.com>
+
+NEXTAUTH_SECRET=943db4ce3f04568194375fc86346bcc0
+NEXTAUTH_URL=http://localhost:3000
+
+NEXT_PUBLIC_GOOGLECALENDAR_API_KEY="AIzaSyC9JoiBdI2dMwd_ouObGbDGL1L5q4-zdrI"
+NEXT_PUBLIC_GOOGLECALENDAR_CALENDAR_ID='bk13tukvivk89ccqpevd3od838@group.calendar.google.com'
