--- a/necchange/package.json
+++ b/necchange/package.json
@@ -15,12 +15,17 @@
     "@fullcalendar/google-calendar": "^6.1.9",
     "@fullcalendar/react": "^6.1.9",
     "@next-auth/prisma-adapter": "^1.0.7",
+    "@rooks/use-window-size": "^4.11.2",
     "axios": "^1.5.0",
+    "fullcalendar": "^6.1.9",
+    "moment": "^2.29.4",
     "next": "latest",
     "next-auth": "^4.23.1",
     "nodemailer": "^6.9.5",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "react-icons": "^4.11.0",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@types/node": "20.6.5",
