--- a/necchange/package.json
+++ b/necchange/package.json
@@ -16,7 +16,9 @@
     "@fullcalendar/react": "^6.1.9",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@rooks/use-window-size": "^4.11.2",
+    "@zxing/browser": "^0.1.4",
     "axios": "^1.5.0",
+    "easyqrcodejs": "^4.5.0",
     "fullcalendar": "^6.1.9",
     "moment": "^2.29.4",
     "next": "latest",
