--- a/necchange/.env
+++ b/necchange/.env
@@ -3,7 +3,7 @@
 
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-DATABASE_URL="postgresql://necc:necc@localhost:5432/NECChange?schema=public"
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/necchange?schema=public"
 
 EMAIL_SERVER=smtp://necclogin:pihycrglxcrjigmt@smtp.gmail.com:587
 EMAIL_FROM=NECChange <necclogin@gmail.com>
