--- a/necchange/package.json
+++ b/necchange/package.json
@@ -14,6 +14,7 @@
     "@fullcalendar/daygrid": "^6.1.9",
     "@fullcalendar/google-calendar": "^6.1.9",
     "@fullcalendar/react": "^6.1.9",
+    "@mui/x-date-pickers": "^6.16.1",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@rooks/use-window-size": "^4.11.2",
     "@zxing/browser": "^0.1.4",
