update and add working

--- a/necchange/.env
+++ b/necchange/.env
@@ -14,6 +14,6 @@ NEXTAUTH_URL=http://localhost:3000
 NEXT_PUBLIC_GOOGLECALENDAR_API_KEY="AIzaSyC9JoiBdI2dMwd_ouObGbDGL1L5q4-zdrI"
 NEXT_PUBLIC_GOOGLECALENDAR_CALENDAR_ID='bk13tukvivk89ccqpevd3od838@group.calendar.google.com'
 
-NEXT_PUBLIC_SHHETDB_ID="5339063taai3t"
+NEXT_PUBLIC_SHEETDB_ID="5339063taai3t"
 NEXT_PUBLIC_SHEETDB_LOGIN="mwbsb7wt"
 NEXT_PUBLIC_SHEETDB_PASSWORD="qbmw29mkeh557kybdnf2"
