--- a/necchange/package.json
+++ b/necchange/package.json
@@ -15,11 +15,17 @@
     "@fullcalendar/google-calendar": "^6.1.9",
     "@fullcalendar/react": "^6.1.9",
     "@next-auth/prisma-adapter": "^1.0.7",
+    "@radix-ui/colors": "^3.0.0",
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/themes": "^2.0.0",
     "@rooks/use-window-size": "^4.11.2",
     "@zxing/browser": "^0.1.4",
     "axios": "^1.5.0",
     "easyqrcodejs": "^4.5.0",
     "fullcalendar": "^6.1.9",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "next": "latest",
     "next-auth": "^4.23.1",
