--- a/necchange/package.json
+++ b/necchange/package.json
@@ -9,18 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@faker-js/faker": "^8.1.0",
     "@fullcalendar/core": "^6.1.9",
     "@fullcalendar/daygrid": "^6.1.9",
     "@fullcalendar/google-calendar": "^6.1.9",
     "@fullcalendar/react": "^6.1.9",
-    "@mui/x-date-pickers": "^6.16.1",
+    "@mui/x-date-pickers": "^6.17.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@rooks/use-window-size": "^4.11.2",
     "@zxing/browser": "^0.1.4",
     "axios": "^1.5.0",
+    "dayjs": "^1.11.10",
     "easyqrcodejs": "^4.5.0",
     "fullcalendar": "^6.1.9",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.7.0",
     "moment": "^2.29.4",
     "next": "latest",
     "next-auth": "^4.23.1",
