--- a/necchange/package.json
+++ b/necchange/package.json
@@ -18,6 +18,7 @@
     "@fullcalendar/react": "^6.1.9",
     "@mui/x-date-pickers": "^6.17.0",
     "@next-auth/prisma-adapter": "^1.0.7",
+    "@nextui-org/react": "^2.4.6",
     "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -28,10 +29,11 @@
     "axios": "^1.5.0",
     "dayjs": "^1.11.10",
     "easyqrcodejs": "^4.5.0",
+    "framer-motion": "^11.3.30",
     "fullcalendar": "^6.1.9",
-    "lodash": "^4.17.21",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.7.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "next": "latest",
     "next-auth": "^4.23.1",
@@ -49,7 +51,7 @@
     "eslint-config-next": "latest",
     "postcss": "latest",
     "prisma": "^5.3.1",
-    "tailwindcss": "latest"
+    "tailwindcss": "^3.4.10"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
