--- a/necchange/package.json
+++ b/necchange/package.json
@@ -19,14 +19,10 @@
     "@mui/x-date-pickers": "^6.17.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@nextui-org/react": "^2.4.6",
-    "@radix-ui/colors": "^3.0.0",
-    "@radix-ui/react-accordion": "^1.1.2",
-    "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/themes": "^2.0.0",
     "@rooks/use-window-size": "^4.11.2",
     "@zxing/browser": "^0.1.4",
     "axios": "^1.5.0",
+    "classnames": "^2.5.1",
     "dayjs": "^1.11.10",
     "easyqrcodejs": "^4.5.0",
     "framer-motion": "^11.3.30",
