--- a/necchange/package.json
+++ b/necchange/package.json
@@ -31,7 +31,7 @@
     "jspdf-autotable": "^3.7.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
-    "next": "latest",
+    "next": "^14.2.5",
     "next-auth": "^4.23.1",
     "nodemailer": "^6.9.5",
     "react": "latest",
