--- a/necchange/package.json
+++ b/necchange/package.json
@@ -33,6 +33,7 @@
     "moment": "^2.29.4",
     "next": "latest",
     "next-auth": "^4.23.1",
+    "node-mailjet": "^6.0.6",
     "nodemailer": "^6.9.5",
     "react": "latest",
     "react-dom": "latest",
