--- a/necchange/package.json
+++ b/necchange/package.json
@@ -34,8 +34,8 @@
     "next": "^14.2.5",
     "next-auth": "^4.23.1",
     "nodemailer": "^6.9.5",
-    "react": "latest",
-    "react-dom": "latest",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-toastify": "^9.1.3"
   },
