--- a/necchange/package.json
+++ b/necchange/package.json
@@ -42,12 +42,12 @@
   "devDependencies": {
     "@types/node": "20.6.5",
     "@types/react": "18.2.22",
-    "autoprefixer": "latest",
+    "autoprefixer": "^10.4.21",
     "eslint": "latest",
     "eslint-config-next": "latest",
-    "postcss": "latest",
+    "postcss": "^8.5.6",
     "prisma": "^5.3.1",
-    "tailwindcss": "^3.4.10"
+    "tailwindcss": "^3.4.18"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
