--- a/necchange/package.json
+++ b/necchange/package.json
@@ -19,7 +19,9 @@
     "@mui/x-date-pickers": "^6.17.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@nextui-org/react": "^2.4.6",
+    "@prisma/client": "^6.18.0",
     "@rooks/use-window-size": "^4.11.2",
+    "@supabase/supabase-js": "^2.78.0",
     "@zxing/browser": "^0.1.4",
     "axios": "^1.5.0",
     "classnames": "^2.5.1",
