--- a/necchange/package.json
+++ b/necchange/package.json
@@ -9,13 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@faker-js/faker": "^8.1.0",
     "@fullcalendar/core": "^6.1.9",
     "@fullcalendar/daygrid": "^6.1.9",
     "@fullcalendar/google-calendar": "^6.1.9",
     "@fullcalendar/react": "^6.1.9",
+    "@mui/material": "^7.3.5",
+    "@mui/system": "^7.3.5",
     "@mui/x-date-pickers": "^6.17.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@nextui-org/react": "^2.4.6",
@@ -35,7 +37,7 @@
     "moment": "^2.29.4",
     "next": "^14.2.5",
     "next-auth": "^4.23.1",
-    "nodemailer": "^6.9.5",
+    "nodemailer": "^7.0.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
