--- a/necchange/package.json
+++ b/necchange/package.json
@@ -16,9 +16,10 @@
     "@fullcalendar/daygrid": "^6.1.9",
     "@fullcalendar/google-calendar": "^6.1.9",
     "@fullcalendar/react": "^6.1.9",
-    "@mui/material": "^7.3.5",
-    "@mui/system": "^7.3.5",
-    "@mui/x-date-pickers": "^6.17.0",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/material": "^5.15.15",
+    "@mui/system": "^5.15.15",
+    "@mui/x-date-pickers": "^6.20.2",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@nextui-org/react": "^2.4.6",
     "@prisma/client": "^6.18.0",
