--- a/necchange/package.json
+++ b/necchange/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/supabase-adapter": "^1.11.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@faker-js/faker": "^8.1.0",
@@ -21,10 +22,11 @@
     "@mui/system": "^5.15.15",
     "@mui/x-date-pickers": "^6.20.2",
     "@next-auth/prisma-adapter": "^1.0.7",
+    "@next-auth/supabase-adapter": "^0.2.1",
     "@nextui-org/react": "^2.4.6",
     "@prisma/client": "^6.18.0",
     "@rooks/use-window-size": "^4.11.2",
-    "@supabase/supabase-js": "^2.78.0",
+    "@supabase/supabase-js": "^2.79.0",
     "@zxing/browser": "^0.1.4",
     "axios": "^1.5.0",
     "classnames": "^2.5.1",
@@ -37,7 +39,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "next": "^14.2.5",
-    "next-auth": "^4.23.1",
+    "next-auth": "^4.24.13",
     "nodemailer": "^7.0.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
